--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_population = gree\n",
+    "greenville_population = greenville[\"popu\"]\n",
     "greenville_population # 84554"
    ]
   },
